--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install Jupyter
         run: pip install jupyter # (if jupyter is not part of your requirements.txt)
       - name: Install Python project
-      - run: pip install -r requirements.txt
+        run: pip install -r requirements.txt
       - run: echo "PYTHON=$(which python)" >> $GITHUB_ENV
 
       - name: Publish to GitHub Pages (and render)
