--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ backcall==0.2.0
 beautifulsoup4==4.11.2
 bleach==6.0.0
 cffi==1.15.1
+click==8.1.3
 comm==0.1.2
 debugpy==1.6.6
 decorator==5.1.1
@@ -15,7 +16,9 @@ defusedxml==0.7.1
 executing==1.2.0
 fastjsonschema==2.16.2
 fqdn==1.5.1
+greenlet==2.0.2
 idna==3.4
+importlib-metadata==6.0.0
 ipykernel==6.21.1
 ipython==8.9.0
 ipython-genutils==0.2.0
@@ -26,6 +29,7 @@ Jinja2==3.1.2
 jsonpointer==2.3
 jsonschema==4.17.3
 jupyter==1.0.0
+jupyter-cache==0.5.0
 jupyter-console==6.4.4
 jupyter-events==0.6.3
 jupyter_client==8.0.2
@@ -38,7 +42,7 @@ MarkupSafe==2.1.2
 matplotlib-inline==0.1.6
 mistune==2.0.5
 nbclassic==0.5.1
-nbclient==0.7.2
+nbclient==0.5.13
 nbconvert==7.2.9
 nbformat==5.7.3
 nest-asyncio==1.5.6
@@ -69,11 +73,14 @@ qtconsole==5.4.0
 QtPy==2.3.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+scipy==1.10.0
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
+SQLAlchemy==1.4.46
 stack-data==0.6.2
+tabulate==0.9.0
 terminado==0.17.1
 tinycss2==1.2.1
 tornado==6.2
@@ -84,3 +91,4 @@ webcolors==1.12
 webencodings==0.5.1
 websocket-client==1.5.1
 widgetsnbextension==4.0.5
+zipp==3.12.1
