--- a/.github/workflows/quarto-render.yml
+++ b/.github/workflows/quarto-render.yml
@@ -28,6 +28,17 @@ jobs:
           # uncomment below and fill to pin a version
           # version: SPECIFIC-QUARTO-VERSION-HERE
       
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+          cache: 'pip'
+      - name: Install Jupyter
+        run: pip install jupyter jupyter-cache
+      - name: Install Python project
+        run: pip install -r requirements.txt
+      - run: echo "PYTHON=$(which python)" >> $GITHUB_ENV
+
       - name: Set up Julia
         uses: julia-actions/setup-julia@v1
         with:
@@ -36,17 +47,6 @@ jobs:
         uses: julia-actions/cache@v1
       - name: Instantiate Julia project
         run: julia --color=yes --project -e 'using Pkg; Pkg.instantiate()'
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-          cache: 'pip'
-      - name: Install Jupyter
-        run: pip install jupyter # (if jupyter is not part of your requirements.txt)
-      - name: Install Python project
-        run: pip install -r requirements.txt
-      - run: echo "PYTHON=$(which python)" >> $GITHUB_ENV
 
       - name: Render Quarto Project
         uses: quarto-dev/quarto-actions/render@v2
